deploy: d2e04338af15f44899886b52846fade8bfec4146

--- a/ar/stay-home-except-for-essential-needs/index.html
+++ b/ar/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>حول قيود  كوفيد-19.</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;12:47 م الساعة 25 نوفمبر 2020</p>
+            <p class="small-text">آخر التحديثات&nbsp;9:50 ص الساعة 2 ديسمبر 2020</p>
           
         </div>
       </div>
@@ -385,15 +385,20 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>هناك زيادة غير مسبوقة في حالات فيروس كوفيد-19 في كاليفورنيا. ولذلك، يُعد تقليل الحركة والاختلاط بين الأفراد أمرًا بالغ الأهمية لتقليل انتقال العدوى وفترات الإقامة بالمستشفيات والوفيات.</p>
-<p>اعتبارًا من 21 نوفمبر 2020، تنصح إدارة الصحة العامة بولاية كاليفورنيا (CDPH) أن يوجد جميع الأشخاص الذين يقطنون في مقاطعات فئة الانتشار الواسع (البنفسجي) في المنزل بحلول الساعة 10:00 مساءً، والبقاء في منازلهم حتى الساعة 5:00 صباح اليوم التالي. تشمل الاستثناءات ما يلي:</p>
-<ul><li>الأشخاص المتوجهون إلى منازلهم أو أماكن عملهم</li><li>الأشخاص الذين يتلقون المساعدة الطبية</li><li>الأشخاص الذين يعملون خلال هذه الساعات</li><li>الأشخاص المشردون</li></ul>
+<p>هناك زيادة غير مسبوقة في حالات فيروس كوفيد-19 في كاليفورنيا. يُعد تقليل الحركة والاختلاط بين الأفراد أمرًا بالغ الأهمية لتقليل انتقال العدوى وفترات الإقامة بالمستشفيات والوفيات.</p>
+<p>اعتبارًا من 21 نوفمبر 2020، تُلزم إدارة الصحة العامة بولاية كاليفورنيا (CDPH) جميع الأشخاص الذين يقطنون في المقاطعات التي تنتمي إلى فئة الانتشار الواسع (البنفسجي) بالوجود في منازلهم بحلول الساعة 10:00 مساءً، والبقاء في منازلهم حتى الساعة 5:00 صباح اليوم التالي. تشمل الاستثناءات ما يلي، على سبيل المثال:</p>
+<ul><li>الأشخاص المتوجهون إلى منازلهم أو أماكن عملهم</li><li>الأشخاص الذين يتلقون المساعدة الطبية</li><li>الأشخاص الذين يعملون في البنية التحتية الحيوية في خلال هذه الساعات</li><li>الأشخاص المشردون</li></ul>
 <p>غالبًا ما تكون التفاعلات خلال هذه الساعات ذات بعد اجتماعي، إلا أن الحد من هذه التفاعلات يساعد في الحد من انتشار فيروس كوفيد-19، ويسري هذا التنبيه حتى 21 ديسمبر 2020، وبالرغم من ذلك فقد يُعدل أو يجري تمديده. اقرأ المزيد عن <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order-qa.aspx">القرار المحدد للبقاء في المنزل بولاية كاليفورنيا</a> على الموقع الإلكتروني لإدارة الصحة العامة في كاليفورنيا.</p>
+<div style="display:none;"><!-- curfew --></div>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
@@ -1142,14 +1147,19 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>يُسمح بفتح حمامات السباحة التي في الهواء الطلق في جميع المقاطعات بولاية كاليفورنيا. يجب أن تغلق حمامات السباحة التي في الهواء الطلق الزلاقات أو الألعاب أو غيرها من وسائل الجذب الترفيهية. </p>
-<p>حمامات السباحة الداخلية مغلقة في المقاطعات <a href="/ar/safer-economy">﻿التي في الفئة الواسعة الانتشار (البنفسجي)﻿ ﻿أو التي في الفئة (الحمراء) الكبيرة﻿</a>.</p>
-<p>تظل الملاهي والمتنزهات المائية، الداخلية والخارجية، مغلقة في جميع أنحاء الولاية.</p>
+<p>حمامات السباحة في الأماكن المغلقة مقفولة في المقاطعات <a href="/ar/safer-economy">﻿التي تنتمي إلى الفئة الواسعة الانتشار (البنفسجي)﻿ ﻿أو التي تنتمي إلى الفئة (الحمراء) الكبيرة﻿</a>.</p>
+<p>يُسمح بدروس الوقاية من الغرق في حمامات السباحة في الأماكن المغلقة والمفتوحة في جميع الفئات، إذ إنها تُعد ضرورية.</p>
+<p>تظل الملاهي والمتنزهات المائية، في الأماكن المغلقة والمفتوحة، مغلقة في جميع أنحاء الولاية.</p>
 <p>عند الخروج من الماء، يجب ارتداء الأقنعة أو أغطية الوجه. ينبغي أن يكون هناك تباعد جسدي في جميع الأوقات. لا يُسمح باحتشاد المجموعات. أحضر منشفتك الخاصة معك، ولا تتشارك مع أي أحد الأغراض التي يتم ارتداؤها على الوجه (مثل النظارات الواقية أو مشابك الأنف أو أنابيب التنفس للغطس). يجب على مُشغلي حمامات السباحة اتباع إرشادات التنظيف والسلامة المشددة للتصدي لفيروس كوفيد-19. ﻿﻿انظر إرشادات قطاع﻿﻿ <a href="https://files.covid19.ca.gov/pdf/guidance-fitness--ar.pdf">﻿الصالات الرياضية ومراكز اللياقة البدنية﻿</a> و <a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--ar.pdf">المخيمات وأماكن الاستجمام والترفيه المفتوحة</a>.</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
