--- a/es/stay-home-except-for-essential-needs/index.html
+++ b/es/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Restricciones por la COVID-19</h1>
           
-            <p class="small-text">Última actualización&nbsp;25 de noviembre de 2020 a las 12:47 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;2 de diciembre de 2020 a las 9:50 a. m.</p>
           
         </div>
       </div>
@@ -386,14 +386,19 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>Ha habido un aumento sin precedentes de casos de COVID-19 en California. Reducir el movimiento y la mezcla de personas es fundamental para reducir la transmisión, las hospitalizaciones y las muertes.</p>
-<p>A partir del 21 de noviembre de 2020, el Departamento de Salud Pública de California (California Department of Public Health, CDPH) aconseja que todas las personas de los condados del nivel Extendido (morado) estén en casa antes de las 10:00 p. m. y permanezcan ahí hasta las 5:00 a. m. del día siguiente. Las excepciones incluyen:</p>
-<ul><li>personas que van a su casa o lugar de trabajo</li><li>personas que se dirigen a obtener asistencia médica</li><li>personas que trabajen durante estas horas</li><li>personas que no tienen donde refugiarse</li></ul>
+<p>A partir del 21 de noviembre de 2020, el Departamento de Salud Pública de California (California Department of Public Health, CDPH) exige que todas las personas de los condados del nivel Extendido (morado) estén en casa antes de las 10:00 p. m. y permanezcan ahí hasta las 5:00 a. m. del día siguiente. Las excepciones incluyen, por ejemplo:</p>
+<ul><li>personas que van a su casa o lugar de trabajo</li><li>personas que se dirigen a obtener asistencia médica</li><li>quienes trabajan en infraestructuras críticas durante estas horas</li><li>personas que no tienen donde refugiarse</li></ul>
 <p>Las interacciones durante estas horas suelen ser de naturaleza social, y la reducción de esas interacciones ayuda a reducir la propagación de la COVID-19. Este aviso está en vigor hasta el 21 de diciembre de 2020, aunque puede modificarse o ampliarse. Lea más sobre la <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order-qa.aspx">orden limitada de permanecer en casa de California</a> en el sitio web del Departamento de Salud Pública de California.</p>
+<div style="display:none;"><!-- curfew --></div>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
@@ -1143,6 +1148,7 @@
       <div class="card-body">
 <p>Se permite la apertura de albercas al aire libre en todos los condados de California. Las piscinas al aire libre deben cerrar los toboganes, los juegos u otras atracciones. </p>
 <p>Las piscinas cubiertas están cerradas en los condados que se encuentran en los niveles <a href="/es/safer-economy">Extendido (morado) o Sustancial (rojo)</a>.</p>
+<p>Las clases de prevención de ahogamientos están permitidas en piscinas cubiertas y al aire libre en todos los niveles, ya que se consideran esenciales.</p>
 <p>Los parques acuáticos, tanto interiores como exteriores, permanecen cerrados en todo el estado.</p>
 <p>Cuando esté fuera del agua, se debe usar mascarillas o cubiertas faciales. El distanciamiento físico debe practicarse en todo momento. No se permiten reuniones grupales. Lleve su propia toalla y no comparta artículos que se usen en la cara (como gafas para nadar, pinzas para la nariz o gafas de buceo). Los operadores de albercas deben seguir las pautas de limpieza y seguridad más estrictas en respuesta a la COVID-19. Consulte la guía del sector para <a href="https://files.covid19.ca.gov/pdf/guidance-fitness--es.pdf">gimnasios y centros de acondicionamiento físico</a> y <a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--es.pdf">campamentos y recreación al aire libre</a>.</p>
 
@@ -1150,6 +1156,10 @@
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
