--- a/ko/stay-home-except-for-essential-needs/index.html
+++ b/ko/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19 제한 조치 관련 사항</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2020년 11월 25일 오후 12:47</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2020년 12월 2일 오전 9:50</p>
           
         </div>
       </div>
@@ -385,15 +385,20 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>킬리포니아에서는 COVID-19 사례가 전례 없는 증가세를 나타내었습니다. 사람들의 이동과 서로 만나는 일을 줄이는 것이 전파와, 입원, 사망 등을 감소시키는데 매우 중요합니다.</p>
-<p>2020년 11월 21일 자로 캘리포니아 공중보건부(California Department of Public Health, CDPH)는 광범위(자주색) 단계에 해당하는 카운티 내 모든 주민들이 오후 10시까지 귀가하여 익일 오전 5시까지 자택에서 머무를 것을 조언합니다. 예외 사항에는 다음이 포함됩니다:</p>
-<ul><li>귀가 또는 직장으로 출근하는 경우</li><li>의학적 지원을 받는 경우</li><li>이 시간 동안 근무하는 경우</li><li>숙소가 없는 경우</li></ul>
+<p>킬리포니아에서는 COVID-19 사례가 전례 없는 증가세를 나타내었습니다. 사람들의 이동과 서로 만나는 일을 줄이는 것이 전파와, 입원, 사망 등을 감소시키는 데 매우 중요합니다.</p>
+<p>2020년 11월 21일 자로 캘리포니아 공중보건부(California Department of Public Health, CDPH)는 광범위(자주색) 단계에 해당하는 카운티 내 모든 주민들이 오후 10시까지 귀가하여 익일 오전 5시까지 자택에서 머무를 것을 요청합니다. 예외 사항에는 다음이 포함됩니다:</p>
+<ul><li>귀가 또는 직장으로 출근하는 경우</li><li>의학적 지원을 받는 경우</li><li>해당 시간동안 중요 시설에서 근무하는 사람의 경우</li><li>숙소가 없는 경우</li></ul>
 <p>이 시간 동안 다른 사람과 만나는 것은 대체로 사회적 성격이 강하며 이러한 만남을 줄임으로써 COVID-19의 확산을 감소시킬 수 있습니다. 본 주의보는 2020년 12월 21일까지 시행되며 변경되거나 연장될 수 있습니다. <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order-qa.aspx">캘리포니아의 제한적 자택 체류 명령</a>에 대한 더 자세한 사항은 캘리포니아 공중보건부( California Department of Public Health) 웹사이트에서 확인하십시오.</p>
+<div style="display:none;"><!-- curfew --></div>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
@@ -1143,6 +1148,7 @@
       <div class="card-body">
 <p>실외 수영장은 캘리포니아 내 전체 카운티에서 운영을 개시할 수 있습니다. 실외 수영장은 물 미끄럼틀, 물놀이 기구 및 기타 오락 시설 등을 반드시 폐쇄해야 합니다. </p>
 <p>실내 수영장은 <a href="/ko/safer-economy">광범위(자주색) 또는 실질(적색) 단계</a>에 속한 카운티의 경우 폐쇄됩니다.</p>
+<p>익사 예방 교실은 필수적이라고 판단되어 모든 단계의 실내외 수영장에서 허용됩니다.</p>
 <p>모든 실내 및 실외 물놀이 공원은 주 전역에 걸쳐 운영을 폐쇄합니다.</p>
 <p>물 밖으로 나올 경우 마스크 또는 얼굴 가리개를 착용해야 합니다. 항상 물리적 거리두기를 실천해야 합니다. 단체 모임은 금지됩니다. 본인 수건을 지참하며 얼굴에 착용하는 용품(물안경, 코마개 또는 스노클 등)은 다른 사람과 함께 사용하지 마십시오. 수영장 관리자는 COVID-19에 대응하여 강화된 세정 및 안전 지침을 준수해야 합니다. <a href="https://files.covid19.ca.gov/pdf/guidance-fitness--ko.pdf">체육관과 헬스장</a> 및 <a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--ko.pdf">캠핑장과 실외 오락 시설</a>을 위한 부문별 지침을 참조하십시오.</p>
 
@@ -1150,6 +1156,10 @@
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
