--- a/vi/stay-home-except-for-essential-needs/index.html
+++ b/vi/stay-home-except-for-essential-needs/index.html
@@ -164,7 +164,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Về những hạn chế trong đại dịch COVID-19</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;25 tháng 11, 2020 lúc 24:47</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;2 tháng 12, 2020 lúc 9:50</p>
           
         </div>
       </div>
@@ -387,15 +387,20 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Các ca mắc COVID-19 đang gia tăng ở mức chưa từng thấy tại California. Việc mọi người giảm di chuyển và tập hợp đông người là rất quan trọng để giảm mức độ lây truyền, số ca nhập viện và tử vong.</p>
-<p>Kể từ ngày 21 tháng 11 năm 2020, Sở Y Tế Công Cộng California (California Department of Public Health, CDPH) khuyến cáo tất cả mọi người ở các quận thuộc cấp Lan Rộng (màu tím) nên về nhà trước 10 giờ tối và ở trong nhà cho đến 5 giờ sáng ngày hôm sau. Các trường hợp ngoại lệ bao gồm:</p>
-<ul><li>Những người đang về nhà hoặc đến nơi làm việc của họ</li><li>Những người đang nhận trợ giúp y tế</li><li>Những người làm việc trong khoảng thời gian này</li><li>Những người không có chỗ ở</li></ul>
+<p>Các ca mắc COVID-19 đang gia tăng ở mức chưa từng thấy tại California. Việc mọi người giảm di chuyển và tụ tập đông người có ý nghĩa rất quan trọng trong việc giảm mức độ lây truyền, số ca nhập viện và tử vong.</p>
+<p>Kể từ ngày 21 tháng 11 năm 2020, Sở Y Tế Công Cộng California (California Department of Public Health, CDPH) yêu cầu tất cả mọi người ở các quận thuộc cấp Lan Rộng (màu tím) phải về nhà trước 10 giờ tối và ở trong nhà cho đến 5 giờ sáng ngày hôm sau. Những trường hợp ngoại lệ bao gồm các ví dụ:</p>
+<ul><li>Những người đang về nhà hoặc đến nơi làm việc của mình</li><li>Những người đang nhận trợ giúp y tế</li><li>Những người làm việc trong ngành cơ sở hạ tầng thiết yếu trong thời gian đó</li><li>Những người không có chỗ ở</li></ul>
 <p>Giao tiếp tương tác trong khoảng thời gian này thường mang tính chất xã giao và việc giảm các giao tiếp tương tác đó sẽ giúp giảm sự lây lan của đại dịch COVID-19. Khuyến cáo này có hiệu lực đến ngày 21 tháng 12 năm 2020, mặc dù có thể được sửa đổi hoặc gia hạn. Đọc thêm về <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order-qa.aspx">Lệnh Ở Nhà Hạn Chế của California</a> trên trang web của Sở Y Tế Công Cộng California.</p>
+<div style="display:none;"><!-- curfew --></div>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
@@ -1144,7 +1149,8 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>Các hồ bơi ngoài trời được phép mở cửa tại tất cả các quận ở California. Các hồ bơi ngoài trời phải đóng các đường trượt, đường lướt hoặc các khu tham quan khác. </p>
-<p>Các hồ bơi trong nhà phải đóng cửa tại các hạt ở cấp độ  <a href="/vi/safer-economy">Lan Rộng (màu tím) hoặc Đáng Kể (màu đỏ)</a>.</p>
+<p>Các hồ bơi trong nhà phải đóng cửa tại các quận ở cấp độ <a href="/vi/safer-economy">Lan Rộng (màu tím) hoặc Đáng Kể (màu đỏ)</a>.</p>
+<p>Được phép tổ chức các lớp học phòng tránh đuối nước tại các bể bơi trong nhà và ngoài trời ở tất cả các cấp vì đây được coi là hoạt động thiết yếu.</p>
 <p>Công viên nước trong nhà và ngoài trời trên toàn tiểu bang vẫn phải đóng cửa.</p>
 <p>Khi ra khỏi nước, nên đeo khẩu trang y tế hoặc đồ che mặt. Phải luôn duy trì giãn cách xã hội. Không được phép tụ tập theo nhóm. Mang theo khăn tắm riêng và không dùng chung các vật dụng đeo trên mặt (như kính bơi, kẹp mũi hoặc ống thở). Những người điều hành bể bơi cần tuân thủ hướng dẫn vệ sinh và an toàn cao để ứng phó với COVID-19. Hãy xem hướng dẫn cho mục <a href="https://files.covid19.ca.gov/pdf/guidance-fitness--vi.pdf">phòng tập gym và trung tâm thể dục</a> và <a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--vi.pdf">khu cắm trại và khu giải trí ngoài trời</a>.</p>
 
@@ -1152,6 +1158,10 @@
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
