--- a/zh-hans/stay-home-except-for-essential-needs/index.html
+++ b/zh-hans/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>关于COVID-19限制</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2020年11月25日, 下午12:47</p>
+            <p class="small-text">最后更新时间&nbsp;2020年12月2日, 上午9:50</p>
           
         </div>
       </div>
@@ -386,14 +386,19 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>加州的COVID-19病例数出现了史无前例的增长。减少人与人之间的走动和接触，对于降低传播数量、住院及死亡人数而言至关重要。</p>
-<p>自2020年11月21日起，加州公共卫生局 (California Department of Public Health, CDPH) 建议处于广泛传播（紫色）等级的县内的所有人士在晚上10点至第二天凌晨5点之间留在家中。例外情况包括：</p>
-<ul><li>回家或前往工作场所的人士</li><li>接受医疗救助的人士</li><li>在上述时段工作的人士</li><li>无家可归人士</li></ul>
+<p>自2020年11月21日起，加州公共卫生局 (California Department of Public Health, CDPH) 要求处于广泛传播（紫色）等级的县内的所有人士在晚上10点至第二天凌晨5点之间留在家中。例外情况包括：</p>
+<ul><li>回家或前往工作场所的人士</li><li>接受医疗救助的人士</li><li>在上述时段参与关键基础设施工作的人士</li><li>无家可归人士</li></ul>
 <p>在上述时段进行的互动通常具有社交性质，而减少该类互动有助于减缓COVID-19的传播。此公告的有效期至2020年12月21日，但可能会进行修订或扩充。请浏览加州公共卫生局的网站，查阅更多有关<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order-qa.aspx">加州限制性居家避疫令</a>的信息。</p>
+<div style="display:none;"><!-- curfew --></div>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
@@ -1143,6 +1148,7 @@
       <div class="card-body">
 <p>加州所有县均允许开放室外游泳池。室外游泳池必须关闭滑梯、游乐设施或其他景点设施。 </p>
 <p>处于<a href="/zh-hans/safer-economy">广泛传播（紫色）或重度（红色）等级</a>的县内的室内游泳池关闭。</p>
+<p>允许在处于所有等级的县内的室内和户外游泳池开展防溺水课程，因为这些课程被视为具有必要性。</p>
 <p>全州范围内的室内和室外水上乐园仍然保持关闭。</p>
 <p>从水中出来后，应佩戴口罩或面罩。应始终保持人际距离。不允许集体聚会。请自备毛巾，同时切勿与他人共用戴在面部的物品（例如护目镜、鼻夹或呼吸管）。游泳池经营者应遵循更严格的清洁和安全指引，以应对新型冠状病毒。请参阅针对<a href="https://files.covid19.ca.gov/pdf/guidance-fitness--zh-hans.pdf">健身房和健身中心</a>以及<a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--zh-hans.pdf">露营地和户外休闲活动</a>的行业指引。</p>
 
@@ -1150,6 +1156,10 @@
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
