--- a/zh-hant/stay-home-except-for-essential-needs/index.html
+++ b/zh-hant/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>關於COVID-19限制</h1>
           
-            <p class="small-text">最近更新&nbsp;2020年11月25日, 下午12:47</p>
+            <p class="small-text">最近更新&nbsp;2020年12月2日, 上午9:50</p>
           
         </div>
       </div>
@@ -386,14 +386,19 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>加州的COVID-19病例數出現了史無前例的增長。減少人與人之間的走動和接觸，對於降低傳播數量、住院及死亡人數而言至關重要。</p>
-<p>自2020年11月21日起，加州公共衛生局 (California Department of Public Health, CDPH) 建議處於廣泛傳播（紫色）等級的縣內的所有人士在晚上10點至第二天凌晨5點之間留在家中。例外情況包括：</p>
-<ul><li>回家或前往工作場所的人士</li><li>接受醫療救助的人士</li><li>在上述時段工作的人士</li><li>無家可歸人士</li></ul>
+<p>自2020年11月21日起，加州公共衛生局 (California Department of Public Health, CDPH) 要求處於廣泛傳播（紫色）等級的縣內的所有人士在晚上10點至第二天凌晨5點之間留在家中。例外情況包括：</p>
+<ul><li>回家或前往工作場所的人士</li><li>接受醫療救助的人士</li><li>在上述時段參與關鍵基礎設施工作的人士</li><li>無家可歸人士</li></ul>
 <p>在上述時段進行的互動通常具有社交性質，而減少該類互動有助於減緩COVID-19的傳播。此公告的有效期至2020年12月21日，但可能會進行修訂或擴充。請瀏覽加州公共衛生局的網站，查閱更多有關<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order-qa.aspx">加州限制性居家避疫令</a>的資訊。</p>
+<div style="display:none;"><!-- curfew --></div>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
@@ -1143,6 +1148,7 @@
       <div class="card-body">
 <p>加州所有縣均允許開放室外游泳池。室外游泳池必須關閉滑梯、遊樂設施或其他景點設施。 </p>
 <p>處於<a href="/zh-hant/safer-economy">廣泛傳播（紫色）或重度（紅色）等級</a>的縣內的室內游泳池關閉。</p>
+<p>允許在處於所有等級的縣內的室內和戶外游泳池開展防溺水課程，因為這些課程被視為具有必要性。</p>
 <p>﻿全州範圍內的室內和室外水上樂園仍然保持關閉。</p>
 <p>從水中出來後，應佩戴口罩或面罩。應始終保持人際距離。不允許集體聚會。請自備毛巾，同時切勿與他人共用戴在面部的物品（例如護目鏡、鼻夾或呼吸管）。游泳池經營者應遵循更嚴格的清潔和安全指引，以應對新型冠狀病毒。請參閱針對<a href="https://files.covid19.ca.gov/pdf/guidance-fitness--zh-hant.pdf">健身房和健身中心</a>以及<a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--zh-hant.pdf">露營地和戶外休閒活動</a>的行業指引。</p>
 
@@ -1150,6 +1156,10 @@
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
