--- a/tl/stay-home-except-for-essential-needs/index.html
+++ b/tl/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tungkol sa mga paghihigpit para sa COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Nobyembre 25, 2020 sa 12:47 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Disyembre 2, 2020 sa 9:50 AM</p>
           
         </div>
       </div>
@@ -386,14 +386,19 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>Talagang tumaas ang bilang ng mga kaso ng COVID-19 sa California. Mahalagang mabawasan ang paggalaw at pakikihalubilo ng mga tao para mabawasan ang hawahan, pagkakaospital, at pagkamatay.</p>
-<p>Simula Nobyembre 21, 2020, pinapayuhan na ng Departamento ng Pampublikong Kalusugan ng California (California Department of Public Health, CDPH) ang lahat ng indibidwal na nasa mga county na nasa tier na Napakarami (purple) na umuwi bago mag-10:00 PM, at manatili sa bahay hanggang 5:00 AM kinabukasan. Kasama sa mga pagbubukod ang:</p>
-<ul><li>Mga indibidwal na pauwi ng bahay o papasok sa kanilang pinagtatrabahuhan</li><li>Mga indibidwal na kumukuha ng medikal na tulong</li><li>Mga nagtatrabaho sa mga oras na ito</li><li>Mga taong walang matirhan</li></ul>
+<p>Simula Nobyembre 21, 2020, iniaatas na ng Departamento ng Pampublikong Kalusugan ng California (California Department of Public Health, CDPH) na umuwi ang lahat ng indibidwal na nasa mga county na nasa tier na Napakarami (purple) bago mag-10:00 PM, at na manatili sila sa bahay hanggang 5:00 AM kinabukasan. Kasama sa mga pagbubukod, halimbawa, ang:</p>
+<ul><li>Mga indibidwal na pauwi ng bahay o papasok sa kanilang pinagtatrabahuhan</li><li>Mga indibidwal na kumukuha ng medikal na tulong</li><li>Mga nagtatrabaho sa kritikal na imprastruktura sa mga oras na ito</li><li>Mga taong walang matirhan</li></ul>
 <p>Kadalasan, pakikisalamuha lang ang mga ugnayan sa mga oras na ito, kaya naman kung mababawasan ito, malilimitahan ang pagkalat ng COVID-19. May bisa ang abisong ito hanggang sa Disyembre 21, 2020, pero puwede itong baguhin o palawigin. Magbasa pa tungkol sa <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order-qa.aspx">Limitadong Utos na Manatili sa Bahay ng California</a> sa website ng Departamento ng Pampublikong Kalusugan ng California.</p>
+<div style="display:none;"><!-- curfew --></div>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
@@ -1143,6 +1148,7 @@
       <div class="card-body">
 <p>Pinapayagang magbukas ang mga outdoor na swimming pool sa lahat ng county ng California. Dapat isara sa mga outdoor na pool ang mga slide, ride, o iba pang attraction. </p>
 <p>Sarado ang mga indoor na swimming pool sa mga bansa sa <a href="/tl/safer-economy">Malawakan (purple) o Substantial (red) na tier</a>.</p>
+<p>Pinapahintulutan ang mga klase para sa pag-iwas sa pagkalunod sa mga indoor at outdoor na swimming pool sa lahat ng tier, dahil itinuturing na kinakailangan ang mga ito.</p>
 <p>Mananatiling sarado ang mga water park, indoor at outdoor, sa buong estado.</p>
 <p>Kapag wala sa tubig, dapat magsuot ng mga mask o takip sa mukha. Dapat magsagawa ng physical distancing sa lahat ng oras. Hindi pinapayagan ang mga panggrupong pagtitipon. Magdala ng sarili mong tuwalya, at huwag makipaghiraman ng mga gamit na isinusuot sa mukha (tulad ng mga goggles, nose clip, o snorkel). Ang mga pool operator ay dapat sumunod sa mas mahigpit na gabay sa paglilinis at kaligtasan bilang pagtugon sa COVID-19. Tingnan ang gabay ng sektor para sa <a href="https://files.covid19.ca.gov/pdf/guidance-fitness--tl.pdf">mga gym at fitness center</a> at <a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--tl.pdf">campground at outdoor na libangan</a>.</p>
 
@@ -1150,6 +1156,10 @@
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
