--- a/pages/wordpress-posts/equity.html
+++ b/pages/wordpress-posts/equity.html
@@ -345,8 +345,7 @@ addtositemap: false
         <li data-label="data1-legend">Statewide positivity</li>
         <li data-label="data1-legend-local">placeholderForDynamicLocation test positivity</li>
         <li data-label="data2-legend">Health equity quartile positivity</li>
-        <li data-label="missing-data-caption">The health equity metric is not<br>applied to counties with a population<br>less than 106,000.</li>
-        <li data-label="missing-data-caption-line-delimiter"><br></li>
+        <li data-label="missing-data-caption">The health equity metric is not applied to counties with a population less than 106,000.</li>
       </ul>
     </div>
 </cagov-chart-d3-lines>
