Update page - new.html

--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -3,7 +3,7 @@
 
 
 
-<p>To prevent our health care system from being overwhelmed, the Regional Stay Home Order goes into effect if intensive care unit (ICU) capacity drops below 15% in a region. Counties in the region will be subject to new restrictions.</p>
+<p>To preserve our health care system, the Regional Stay Home Order goes into effect if intensive care unit (ICU) capacity drops below 15% in a region. Counties in the region will be subject to new restrictions.</p>
 
 
 
