Update page - new.html

--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -1,10 +1,10 @@
 
-<h2 class="h3 text-primary">Immediate relief fund for businesses</h2>
+<h2 class="h3 text-primary">New Regional Stay Home Order</h2>
 
 
 
-<p>California is providing new relief for businesses including tax deferrals, an emergency relief package, and an increased California Rebuilding Fund. Check back here to find out when you can sign up.</p>
+<p>To preserve our health care system, the Regional Stay Home Order goes into effect if intensive care unit (ICU) capacity drops below 15% in a region. Counties in the region will be subject to new restrictions.</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/business-and-employers/">Learn more about the resources available</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/stay-home-except-for-essential-needs/">Read more about the order</a></p>
