--- a/pages/wordpress-posts/equity.html
+++ b/pages/wordpress-posts/equity.html
@@ -414,9 +414,12 @@ addtositemap: false
 <cagov-chart-d3-bar class="chart d-none"><ul>
         <li data-label="sectionTitle">Factors that increase risk of infection and severe illness</li>
     <li data-label="sectionDescription">Californians in crowded housing or transportation, and with less access to paid leave and other worker protections have a higher risk of infection of COVID-19. Social determinants of health, such as food insecurity, lack of health insurance, and housing instability can increase the risk of poor outcomes. These social determinants of health are often the result of structural racism.</li>
-    <li data-label="chartTitleIncome">Case rate by median annual household income bracket</li>
-    <li data-label="chartTitleHousing">Case rate by crowding housing</li>
-    <li data-label="chartTitleHealthcare">Case rate by access to healthcare</li>
+    <li data-label="chartTitleIncome">Community case rate by median annual household income bracket</li>
+    <li data-label="chartTitleHousing">Community case rate by amount of crowded housing</li>
+    <li data-label="chartTitleHealthcare">Community case rate by health care access</li>
+    <li data-label="xAxisTitleIncome">Median annual household income bracket</li>
+    <li data-label="xAxisTitleHousing">Percentage of community living in crowded housing</li>
+    <li data-label="xAxisTitleHealthcare">Percentage of community without health insurance</li>
     <li data-label="chartButtonIncome">Income</li>
     <li data-label="chartButtonHousing">Crowded housing</li>
     <li data-label="chartButtonHealthcare">Access to health insurance</li>
