--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>About COVID-19 restrictions</h1>
           
-            <p class="small-text">Last updated&nbsp;December 3, 2020 at 6:04 PM</p>
+            <p class="small-text">Last updated&nbsp;December 3, 2020 at 6:25 PM</p>
           
         </div>
       </div>
@@ -175,7 +175,7 @@
 
 
 
-<h3><strong>Stay Home Order:</strong></h3>
+<h3>Stay Home Order:</h3>
 
 
 
@@ -183,7 +183,7 @@
 
 
 
-<h3><strong>Blueprint for a Safer Economy:</strong></h3>
+<h3>Blueprint for a Safer Economy:</h3>
 
 
 
@@ -191,7 +191,7 @@
 
 
 
-<h3><strong>Limited Stay Home Order:</strong></h3>
+<h3>Limited Stay Home Order:</h3>
 
 
 
@@ -199,7 +199,7 @@
 
 
 
-<h3><strong>Regional Stay Home Order:</strong></h3>
+<h3>Regional Stay Home Order:</h3>
 
 
 
