deploy: ee6fd43d9bf7e9614b103b781df22d2e78ad30e2

--- a/vi/state-dashboard/index.html
+++ b/vi/state-dashboard/index.html
@@ -326,7 +326,7 @@
 
         <div class="text-center">
         
-            <a href="/data-and-tools/" class="link-arrow-blue">
+            <a href="/data-and-tools/" class="link-arrow-blue mb-4">
             <div class="link-arrow-label">Explore more data</div>
             <cagov-arrow></cagov-arrow>
             </a>  
