test file update

--- a/pages/wordpress-posts/equity.html
+++ b/pages/wordpress-posts/equity.html
@@ -21,7 +21,7 @@ addtositemap: false
   } %}-->
 
 
-
+<!-- test -->
 <p class="emphasized">All Californians—regardless of where they live, their working environment, their social supports, or how they identify⁠—deserve a healthy life.</p>
 
 
