--- a/ar/data-and-tools/index.html
+++ b/ar/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>البيانات والأدوات</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;8:40 م الساعة 3 ديسمبر 2020</p>
+            <p class="small-text">آخر التحديثات&nbsp;10:48 ص الساعة 4 ديسمبر 2020</p>
           
         </div>
       </div>
