deploy: 396d501f4c3c8fbe6ac72f3fd6c2c51eb8c988e8

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;December 3, 2020 at 4:44 AM</p>
+            <p class="small-text">Last updated&nbsp;December 4, 2020 at 11:02 AM</p>
           
         </div>
       </div>
@@ -418,6 +418,11 @@
 
 
 <ul><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19Vaccine.aspx">COVID-19 vaccine planning</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/index.html">Vaccines</a></li></ul>
+
+
+
+<!-- Ethnio Activation Code -->
+<script type="text/javascript" language="javascript" src="//ethn.io/26760.js" async="true" defer charset="utf-8"></script>
 </div>
     </div>
   </div>
