--- a/healthcorps/index.html
+++ b/healthcorps/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>California Health Corps</h1>
           
-            <p class="small-text">Last updated&nbsp;December 4, 2020 at 11:14 AM</p>
+            <p class="small-text">Last updated&nbsp;December 4, 2020 at 11:17 AM</p>
           
         </div>
       </div>
@@ -199,7 +199,7 @@
 
 
 
-<ul><li>Nurses (RN, LVN, CNA) </li><li>Emergency medical technicians </li><li>Nurse practitioners </li><li>Paramedics </li><li>Medical assistants </li><li>Physicians (MD, DO, psychiatrist) </li><li>Respiratory therapists </li><li>Behavioral health professionals </li></ul>
+<ul><li>Nurses (RN, LVN, CNA) </li><li>Emergency medical technicians </li><li>Nurse practitioners </li><li>Paramedics</li><li>Physicians (MD, DO, psychiatrist) </li><li>Respiratory therapists </li><li>Behavioral health professionals </li></ul>
 
 
 
