--- a/es/latest-news/index.html
+++ b/es/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Últimas noticias sobre COVID-19</h1>
           
-            <p class="small-text">Última actualización&nbsp;4 de diciembre de 2020 a las 10:13 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;4 de diciembre de 2020 a las 10:35 p. m.</p>
           
         </div>
       </div>
@@ -185,6 +185,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--43841 -->December 3, 2020</small></p>
           <div class="card-text" lang="en-US">Health officials are tracking the state by five regions: Northern California, Bay Area, Greater Sacramento, San Joaquin Valley and Southern California Regional Stay at Home Order takes effect Saturday; affects regions wi...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-323.aspx" lang="en-US" hreflang="en-US">State Officials Announce Latest COVID-19 Facts</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--b0490b8133c5c8283f773e248c94cc56 -->December 3, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today announced the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
