--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>About COVID-19 restrictions</h1>
           
-            <p class="small-text">Last updated&nbsp;December 4, 2020 at 9:59 PM</p>
+            <p class="small-text">Last updated&nbsp;December 4, 2020 at 10:50 PM</p>
           
         </div>
       </div>
@@ -240,7 +240,7 @@
 
 
 
-<figure class="wp-block-table aligncenter"><table><tbody><tr><td>Northern California</td><td>&nbsp;&nbsp;</td><td>20.9%</td></tr><tr><td>Bay Area</td><td> </td><td>21.2%</td></tr><tr><td>Greater Sacramento </td><td> </td><td>21.4%</td></tr><tr><td>San Joaquin Valley</td><td> </td><td>14.1%</td></tr><tr><td>Southern California</td><td> </td><td>13.1%</td></tr></tbody></table></figure>
+<figure class="wp-block-table aligncenter"><table><tbody><tr><td>Northern California</td><td>&nbsp;&nbsp;</td><td>20.9%</td></tr><tr><td>Bay Area</td><td> </td><td>21.2%</td></tr><tr><td>Greater Sacramento </td><td> </td><td>21.4%</td></tr><tr><td>San Joaquin Valley</td><td> </td><td>14.1%</td></tr><tr><td>Southern California</td><td> </td><td>13.1%</td></tr></tbody></table><figcaption>The Regional Stay Home Order goes into effect Sunday, December 5th, 2020</figcaption></figure>
 
 
 
@@ -256,7 +256,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="regional"> <strong>How is daily regional available ICU capacity calculated?</strong></h4>
+<h4 id="regional">&nbsp;<strong>How is daily regional available ICU capacity calculated?</strong></h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
