--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>About COVID-19 restrictions</h1>
           
-            <p class="small-text">Last updated&nbsp;December 4, 2020 at 10:50 PM</p>
+            <p class="small-text">Last updated&nbsp;December 5, 2020 at 10:13 AM</p>
           
         </div>
       </div>
@@ -240,7 +240,7 @@
 
 
 
-<figure class="wp-block-table aligncenter"><table><tbody><tr><td>Northern California</td><td>&nbsp;&nbsp;</td><td>20.9%</td></tr><tr><td>Bay Area</td><td> </td><td>21.2%</td></tr><tr><td>Greater Sacramento </td><td> </td><td>21.4%</td></tr><tr><td>San Joaquin Valley</td><td> </td><td>14.1%</td></tr><tr><td>Southern California</td><td> </td><td>13.1%</td></tr></tbody></table><figcaption>The Regional Stay Home Order goes into effect Sunday, December 5th, 2020</figcaption></figure>
+<figure class="wp-block-table aligncenter"><table><tbody><tr><td>Northern California</td><td>&nbsp;&nbsp;</td><td>20.9%</td></tr><tr><td>Bay Area</td><td> </td><td>21.2%</td></tr><tr><td>Greater Sacramento </td><td> </td><td>21.4%</td></tr><tr><td>San Joaquin Valley</td><td> </td><td>14.1%</td></tr><tr><td>Southern California</td><td> </td><td>13.1%</td></tr></tbody></table><figcaption>The Regional Stay Home Order goes into effect Saturday, December 5th, 2020</figcaption></figure>
 
 
 
