--- a/tl/data-and-tools/index.html
+++ b/tl/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga datos at tool</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Disyembre 5, 2020 sa 11:45 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Disyembre 5, 2020 sa 12:17 PM</p>
           
         </div>
       </div>
