--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>About COVID-19 restrictions</h1>
           
-            <p class="small-text">Last updated&nbsp;December 5, 2020 at 1:33 PM</p>
+            <p class="small-text">Last updated&nbsp;December 5, 2020 at 2:08 PM</p>
           
         </div>
       </div>
@@ -289,13 +289,11 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>The Regional Stay Home Order would be in effect for 3 weeks after the trigger and instructs Californians to stay at home as much as possible to limit the mixing with other households that can lead to COVID-19 spread. It allows access to (and travel for) critical services and allows outdoor activities to preserve Californians’ physical and mental health. This limited closure will help stop the surge and prevent overwhelming regional ICU capacity.&nbsp;</p>
-<p>In any region that triggers a Regional Stay Home Order because it drops below 15% ICU capacity all operations in the following sectors must be closed (except to the extent that their operations fall within critical infrastructure): </p>
-<ul><li>Indoor and outdoor playgrounds</li><li>Indoor recreational facilities</li><li>Hair salons and barbershops</li><li>Personal care services</li><li>Museums, zoos, and aquariums</li><li>Movie theaters</li><li>Wineries</li><li>Bars, breweries, and distilleries</li><li>Family entertainment centers</li><li>Cardrooms and satellite wagering</li><li>Limited services</li><li>Live audience sports</li><li>Amusement parks</li></ul>
+<p>The Regional Stay at Home Order instructs Californians to stay at home as much as possible and to stop mixing between households that can lead to COVID-19 spread. It allows access to critical services and allows outdoor activities to preserve Californians’ physical and mental health. The Regional Stay at Home Order will help stop the surge and prevent overwhelming regional ICU capacity. </p>
+<p>Under the order, the following sectors are allowed to remain open with safety precautions: </p>
 <p>The following sectors will have additional modifications in addition to 100% masking and physical distancing:</p>
-<ul><li><strong>Outdoor recreational facilities:</strong> Allow outdoor operation only without any food, drink or alcohol sales. Additionally, overnight stays at campgrounds will not be permitted.</li><li><strong>Retail: </strong>Allow indoor operation at 20% capacity with entrance metering and no eating or drinking in the stores. Additionally, special hours should be instituted for seniors and others with chronic conditions or compromised immune systems.&nbsp;</li><li><strong>Shopping centers</strong>: Allow indoor operation at 20% capacity with entrance metering and no eating or drinking in the stores. Additionally, special hours should be instituted for seniors and others with chronic conditions or compromised immune systems.</li><li><strong>Hotels and lodging:</strong> Allow to open for critical infrastructure support only.</li><li><strong>Restaurants: </strong>Allow only for take-out, pick-up, or delivery.</li><li><strong>Offices: </strong>Allow remote only except for critical infrastructure sectors where remote working is not possible.&nbsp;</li><li><strong>Places of worship and political expression: </strong>Allow outdoor services only.</li><li><strong>Entertainment production including professional sports: </strong>Allow operation without live audiences. Additionally, testing protocol and “bubbles” are highly encouraged.</li></ul>
-<p>The following sectors are allowed to remain open when a remote option is not possible with appropriate infectious disease preventative measures including 100% masking and physical distancing:</p>
-<ul><li>Critical infrastructure </li><li>Non-urgent medical and dental care</li><li>Child care and pre-K</li></ul>
+<ul><li><strong>Outdoor recreational facilities:</strong> Allow outdoor operation only for the purpose of facilitating physically distanced personal health and wellness through outdoor exercise, without any food, drink or alcohol sales. Additionally, overnight stays at campgrounds will not be permitted.</li><li><strong>Retail: </strong>Allow indoor operation at 20% capacity with entrance metering and no eating or drinking in the stores. Additionally, special hours should be instituted for seniors and others with chronic conditions or compromised immune systems. </li><li><strong>Shopping centers</strong>: Allow indoor access at 20% capacity with entrance metering and no eating or drinking in the stores. Additionally, special hours should be instituted for seniors and others with chronic conditions or compromised immune systems.</li><li><strong>Hotels and lodging:</strong> Allow for COVID-19 mitigation and containment measures, treatment measures, provide accommodation for essential workers, or providing housing solutions, including measures to protect homeless populations.</li><li><strong>Restaurants: </strong>Allow only for take out or delivery.</li><li><strong>Offices: </strong>Allow remote only except for critical infrastructure sectors where remote working is not possible. </li><li><strong>Places of worship and political expression: </strong>Allow outdoor activities only.</li><li><strong>Entertainment production: </strong>Industries, studios, and other related establishments such as establishments that provide content for professional broadcast can operate without live audiences.</li></ul>
+<p>In any region that triggers a Regional Stay Home Order because it drops below 15% ICU capacity all operations in the following sectors must be closed (except to the extent that their operations fall within critical infrastructure):</p>
 
       </div>
     </div>
@@ -313,6 +311,7 @@
 
 
 
+<ul><li>Critical infrastructure (when remote option is not possible)</li><li>Schools</li><li>Non-urgent medical and dental care</li><li>Child care and pre-K</li></ul>
 
 
 
@@ -328,8 +327,7 @@
 
 
 
-
-
+<ul><li>Indoor and outdoor playgrounds</li><li>Indoor recreational facilities</li><li>Hair salons and barbershops</li><li>Personal care services</li><li>Museums, zoos, and aquariums</li><li>Movie theaters (except drive-in)</li><li>Wineries, bars, breweries, and distilleries</li><li>Family entertainment centers</li><li>Cardrooms and satellite wagering</li><li>Limited services</li><li>Live audience sports</li><li>Amusement parks</li></ul>
 
 
 
