deploy: 3ca299327c4425590fb92f37e5b34cb89347608d

--- a/safer-economy/index.html
+++ b/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint for a Safer Economy</h1>
           
-            <p class="small-text">Last updated&nbsp;December 5, 2020 at 2:45 PM</p>
+            <p class="small-text">Last updated&nbsp;December 5, 2020 at 9:19 PM</p>
           
         </div>
       </div>
@@ -228,7 +228,11 @@
 
 
 
-<p>The State continues to record an unprecedented surge in the level of community spread of COVID-19. The Regional Stay Home Order, announced December 3, 2020, will go into effect within 24 hours in regions with less than 15% intensive care unit (ICU) availability. Learn more about the <a href="https://covid19.ca.gov/stay-home-except-for-essential-needs/#icu-capacity">actual ICU capacity</a> remaining as of December 4 for the 5 regions.</p>
+<p>The State continues to record an unprecedented surge in the level of community spread of COVID-19. The Regional Stay Home Order, announced December 3, 2020, will go into effect at 11:59 PM the next day in regions with less than 15% intensive care unit (ICU) availability. </p>
+
+
+
+<p>Learn more about the <a href="https://covid19.ca.gov/stay-home-except-for-essential-needs/#icu-capacity">regional ICU bed % available</a> in each region.   </p>
 
 
 
