deploy: f4e222783d65a61abbe34d3170befaa528b94a6d

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;December 5, 2020 at 10:54 AM</p>
+            <p class="small-text">Last updated&nbsp;December 6, 2020 at 5:52 AM</p>
           
         </div>
       </div>
@@ -195,7 +195,7 @@
 
 
 
-<h3><strong>Vaccine safety is a top priority</strong></h3>
+<h3>Vaccine safety is a top priority</h3>
 
 
 
@@ -207,7 +207,7 @@
 
 
 
-<h3><strong>Vaccine distribution and prioritization</strong></h3>
+<h3>Vaccine distribution and prioritization</h3>
 
 
 
@@ -219,23 +219,23 @@
 
 
 
-<h3><strong>First priority&nbsp;</strong></h3>
+<h4>First priority </h4>
 
 
 
-<ul><li>Acute care, psychiatric and correctional facility hospitals</li><li>Skilled nursing facilities, assisted living facilities, and similar settings for older or medically vulnerable</li><li>Paramedics, EMTs and others providing emergency medical services</li><li>Dialysis centers<br></li></ul>
+<ul><li>Acute care, psychiatric and correctional facility hospitals</li><li>Skilled nursing facilities, assisted living facilities, and similar settings for older or medically vulnerable</li><li>Paramedics, EMTs and others providing emergency medical services</li><li>Dialysis centers</li></ul>
 
 
 
-<h3><strong>Second priority</strong></h3>
+<h4>Second priority</h4>
 
 
 
-<ul><li>Intermediate care facilities</li><li>Home health care &amp; in home supportive services</li><li>Community health workers</li><li>Public health field staff</li><li>Primary Care clinics, including Federally Qualified Health Centers, Rural Health Centers, correctional facility clinics and urgent care clinics<br></li></ul>
+<ul><li>Intermediate care facilities</li><li>Home health care &amp; in home supportive services</li><li>Community health workers</li><li>Public health field staff</li><li>Primary Care clinics, including Federally Qualified Health Centers, Rural Health Centers, correctional facility clinics and urgent care clinics</li></ul>
 
 
 
-<h3><strong>Third priority&nbsp;</strong></h3>
+<h4>Third priority </h4>
 
 
 
@@ -247,7 +247,7 @@
 
 
 
-<p>This will be followed by Californians critical to our daily existence and those at highest risk of becoming infected, severely ill or spreading COVID-19.    </p>
+<p>This will be followed by Californians critical to our daily existence and those at highest risk of becoming infected, severely ill or spreading COVID-19.&nbsp; &nbsp;&nbsp;</p>
 
 
 
