--- a/safer-economy/index.html
+++ b/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint for a Safer Economy</h1>
           
-            <p class="small-text">Last updated&nbsp;December 5, 2020 at 9:19 PM</p>
+            <p class="small-text">Last updated&nbsp;December 6, 2020 at 6:00 AM</p>
           
         </div>
       </div>
