--- a/tl/latest-news/index.html
+++ b/tl/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pinakabagong balita sa COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Disyembre 5, 2020 sa 9:19 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Disyembre 6, 2020 sa 6:00 AM</p>
           
         </div>
       </div>
