--- a/tl/safer-economy/index.html
+++ b/tl/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint para sa isang Mas Ligtas na Ekonomiya</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Disyembre 5, 2020 sa 9:19 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Disyembre 6, 2020 sa 6:00 AM</p>
           
         </div>
       </div>
