--- a/zh-hans/data-and-tools/index.html
+++ b/zh-hans/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>数据及工具</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2020年12月5日, 下午9:19</p>
+            <p class="small-text">最后更新时间&nbsp;2020年12月6日, 上午6:00</p>
           
         </div>
       </div>
