--- a/zh-hant/safer-economy/index.html
+++ b/zh-hant/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的經濟藍圖</h1>
           
-            <p class="small-text">最近更新&nbsp;2020年12月5日, 下午9:19</p>
+            <p class="small-text">最近更新&nbsp;2020年12月6日, 上午6:00</p>
           
         </div>
       </div>
