--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>About COVID-19 restrictions</h1>
           
-            <p class="small-text">Last updated&nbsp;December 6, 2020 at 7:51 AM</p>
+            <p class="small-text">Last updated&nbsp;December 6, 2020 at 8:42 AM</p>
           
         </div>
       </div>
@@ -365,7 +365,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>The state will post <a href="https://docs.google.com/document/d/1xY5kma1vIJ6F32E_B9K_rAP51Rg_oNZ7k6WIka_4mIA/edit#icu-capacity">ICU capacity by region</a> daily. The state also maintains a publicly-available dashboard on <a href="https://covid19.ca.gov/state-dashboard/">hospital and ICU capacity by county</a>.</p>
+<p>The state will post <a href="#icu-capacity">ICU capacity by region</a> daily. The state also maintains a publicly-available dashboard on <a href="https://covid19.ca.gov/state-dashboard/">hospital and ICU capacity by county</a>.</p>
 
       </div>
     </div>
