deploy: ab76075669b3efe4bf8abade063fd928a4d16ba4

--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>About COVID-19 restrictions</h1>
           
-            <p class="small-text">Last updated&nbsp;December 6, 2020 at 8:42 AM</p>
+            <p class="small-text">Last updated&nbsp;December 6, 2020 at 11:26 AM</p>
           
         </div>
       </div>
@@ -236,11 +236,11 @@
 
 
 
-<h4 id="icu-capacity">SAHO ICU bed % available as of December 5, 2020 for the 5 regions: </h4>
+<h4 id="icu-capacity">SAHO ICU bed % available as of December 6, 2020 for the 5 regions: </h4>
 
 
 
-<figure class="wp-block-table aligncenter"><table><tbody><tr><td>Northern California</td><td>&nbsp;&nbsp;</td><td>24.1%</td></tr><tr><td>Bay Area</td><td> </td><td>21.7%</td></tr><tr><td>Greater Sacramento </td><td> </td><td>21.4%</td></tr><tr><td>San Joaquin Valley</td><td> </td><td>8.6%</td></tr><tr><td>Southern California</td><td> </td><td>12.5%</td></tr></tbody></table><figcaption>For regions under 15%, the Regional Stay Home Order goes into effect Sunday, December 6, 2020 at 11:59 PM.</figcaption></figure>
+<figure class="wp-block-table aligncenter"><table><tbody><tr><td>Northern California</td><td>&nbsp;&nbsp;</td><td>26.5%</td></tr><tr><td>Bay Area</td><td> </td><td>24.1%</td></tr><tr><td>Greater Sacramento </td><td> </td><td>18.2%</td></tr><tr><td>San Joaquin Valley</td><td> </td><td><strong>6.6%</strong></td></tr><tr><td>Southern California</td><td> </td><td><strong>10.3%</strong></td></tr></tbody></table><figcaption>For regions under 15%, the Regional Stay Home Order goes into effect Sunday, December 6, 2020 at 11:59 PM.</figcaption></figure>
 
 
 
@@ -256,7 +256,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>Why is this Regional Stay Home Order being implemented now? </h4>
+<h4>Why is this Regional Stay Home Order being implemented now?&nbsp;</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -284,7 +284,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>The Regional Stay Home Order instructs Californians to stay at home as much as possible and to stop mixing between households that can lead to COVID-19 spread. It allows access to critical services and allows outdoor activities to preserve Californians’ physical and mental health. The Regional Stay Home Order will help stop the surge and prevent overwhelming regional ICU capacity. </p>
+<p>The Regional Stay Home Order instructs Californians to stay at home as much as possible and to&nbsp;stop&nbsp;mixing&nbsp;between&nbsp;households that can lead to COVID-19 spread. It allows access to critical services and allows outdoor activities to preserve Californians’ physical and mental health. The Regional Stay Home Order&nbsp;will help stop the surge and prevent overwhelming regional ICU capacity.&nbsp;</p>
 <p>Under the order, the following sectors are allowed to remain open with safety precautions:&nbsp;</p>
 <ul><li>Critical infrastructure (when remote option is not possible)</li><li>Schools</li><li>Non-urgent medical and dental care</li><li>Child care and pre-K</li></ul>
 <p>The following sectors will have additional modifications in addition to 100% masking and physical distancing:</p>
@@ -388,7 +388,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Hospitals are required to submit information on the total number of available staffed ICU beds daily. This includes both existing staffed ICU beds and staffed ICU surge beds. To calculate regional ICU capacity the total number of adult ICU beds is calculated by removing neonatal ICU beds (NICU) and pediatric intensive care unit beds (PICU) as well as standardizing current adult ICU capacity. Consistent with the goal of the Regional Stay Home Order, this calculation ensures that sufficient ICU bed capacity is available for COVID and non-COVID related conditions.   </p>
+<p>Hospitals are required to submit information on the total number of available staffed ICU beds daily. This includes both existing staffed ICU beds and staffed ICU surge beds. To calculate regional ICU capacity the total number of adult ICU beds is calculated by removing neonatal ICU beds (NICU) and pediatric intensive care unit beds (PICU) as well as standardizing current adult ICU capacity. Consistent with the goal of the Regional Stay Home Order, this calculation ensures that sufficient ICU bed capacity is available for COVID and non-COVID related conditions.&nbsp;&nbsp;&nbsp;</p>
 <p>As of December 4, 2020 the ICU capacity is calculated as described above.</p>
 
       </div>
