--- a/tl/latest-news/index.html
+++ b/tl/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pinakabagong balita sa COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Disyembre 6, 2020 sa 11:29 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Disyembre 6, 2020 sa 2:08 PM</p>
           
         </div>
       </div>
@@ -171,6 +171,14 @@
     <div class="row">
       <div class="col-lg-10 mx-auto">
         <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-325.aspx" lang="en-US" hreflang="en-US">​​State Officials Announce Latest COVID-19 Facts</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--49f311dafcd4ee04cc04175514fbff05 -->December 5, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today  announced the most recent statistics on COVID-19, including data on intensive care unit (ICU) capacity across the state.</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
           <h2 class="card-title lead" lang="en-US">
             <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-324.aspx" lang="en-US" hreflang="en-US">​​State Officials Announce Latest COVID-19 Facts</a>
