--- a/ar/latest-news/index.html
+++ b/ar/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>آخر الأخبار عن COVID-19</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;2:08 م الساعة 6 ديسمبر 2020</p>
+            <p class="small-text">آخر التحديثات&nbsp;6:58 ص الساعة 7 ديسمبر 2020</p>
           
         </div>
       </div>
