--- a/data-and-tools/index.html
+++ b/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Data and tools</h1>
           
-            <p class="small-text">Last updated&nbsp;December 6, 2020 at 2:07 PM</p>
+            <p class="small-text">Last updated&nbsp;December 7, 2020 at 6:58 AM</p>
           
         </div>
       </div>
