--- a/es/latest-news/index.html
+++ b/es/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Últimas noticias sobre COVID-19</h1>
           
-            <p class="small-text">Última actualización&nbsp;6 de diciembre de 2020 a las 2:08 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;7 de diciembre de 2020 a las 6:58 a. m.</p>
           
         </div>
       </div>
