--- a/zh-hans/safer-economy/index.html
+++ b/zh-hans/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的经济蓝图</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2020年12月6日, 下午2:07</p>
+            <p class="small-text">最后更新时间&nbsp;2020年12月7日, 上午6:58</p>
           
         </div>
       </div>
