--- a/zh-hant/data-and-tools/index.html
+++ b/zh-hant/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>數據和工具</h1>
           
-            <p class="small-text">最近更新&nbsp;2020年12月6日, 下午2:07</p>
+            <p class="small-text">最近更新&nbsp;2020年12月7日, 上午6:58</p>
           
         </div>
       </div>
