deploy: 697295c3a36dea545564a3d790ae470c4755baf3

--- a/es/restaurants-deliver-home-meals-for-seniors/index.html
+++ b/es/restaurants-deliver-home-meals-for-seniors/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Entrega de platos excelentes: comidas caseras para adultos mayores</h1>
           
-            <p class="small-text">Última actualización&nbsp;30 de noviembre de 2020 a las 5:15 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;2 de diciembre de 2020 a las 2:27 p. m.</p>
           
         </div>
       </div>
@@ -175,7 +175,7 @@
 
 
 
-<p>Nos complace anunciar que el programa de Asistencia Pública (Public Assistance, PA) de la Agencia Federal para el Manejo de Emergencias (Federal Emergency Management Agency, FEMA) autorizó una prórroga para el programa Great Plates Delivered hasta el 8 de diciembre de 2020.</p>
+<p>Nos complace anunciar que el programa de Asistencia Pública (Public Assistance, PA) de la Agencia Federal para el Manejo de Emergencias (Federal Emergency Management Agency, FEMA) autorizó una prórroga para el programa Great Plates Delivered hasta el 7 de enero de 2021.</p>
 
 
 
