--- a/ko/restaurants-deliver-home-meals-for-seniors/index.html
+++ b/ko/restaurants-deliver-home-meals-for-seniors/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>훌륭한 음식 배달: 고령자를 위한 가정식</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2020년 11월 30일 오후 5:15</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2020년 12월 2일 오후 2:27</p>
           
         </div>
       </div>
@@ -175,7 +175,7 @@
 
 
 
-<p>저희는 연방 재난 관리청(Federal Emergency Management Agency, FEMA) 공공 지원(Public Assistance, PA) 프로그램에서 2020년 12월 8일까지 훌륭한 음식 배달 프로그램 연장을 승인했다는 사실을 기쁜 마음으로 여러분께 알려드립니다.</p>
+<p>저희는 연방 재난 관리청(Federal Emergency Management Agency, FEMA) 공공 지원(Public Assistance, PA) 프로그램에서 2021년 1월 7일까지 훌륭한 음식 배달 프로그램을 연장하는 것에 대해 승인하였음을 기쁘게 알려 드립니다.</p>
 
 
 
