--- a/healthcorps/index.html
+++ b/healthcorps/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>California Health Corps</h1>
           
-            <p class="small-text">Last updated&nbsp;December 7, 2020 at 10:17 AM</p>
+            <p class="small-text">Last updated&nbsp;December 7, 2020 at 11:18 AM</p>
           
         </div>
       </div>
@@ -179,7 +179,7 @@
 
 
 
-<ul><li><strong><a href="#Health-professionals">Health professionals, California needs you!</a></strong></li><li><strong><a href="#Steps-to-join-California-Health-Corps">How to join California Health Corps</a></strong></li><li><strong><a href="#Questions-and-answers">Questions and answers</a></strong></li><li><strong><a href="#Health-Corps-Resources">Resources for participants</a></strong></li></ul>
+<ul><li><strong><a href="#Health-professionals">Health professionals, California needs you!</a></strong></li><li><strong><a href="#Steps-to-join-California-Health-Corps">How to join California Health Corps</a></strong></li><li><strong><a href="#Resources-for-participants">Resources for participants</a></strong></li><li><strong><a href="#Questions-and-answers">Questions and answers</a></strong></li></ul>
 
 
 
@@ -252,6 +252,14 @@
 
 
 <ul><li>When you are officially approved to work for CA Health Corps, you can sign up for shifts, view upcoming shifts, submit hours worked, view helpful resources, and more on your personal online portal.</li><li>We try to match you with facilities nearest to you, or we can arrange for you to be added to facilities statewide.&nbsp;</li><li>CA Health Corps Deployment Team will support you in signing up for shifts, arranging for lodging, reimbursing your travel expenses, answering your specific questions, tracking your hours, and more.</li></ul>
+
+
+
+<h2 id="Resources-for-participants">Resources for participants</h2>
+
+
+
+<ul><li>Health Corps FAQ: <a href="https://files.covid19.ca.gov/pdf/FAQ-Health-Corps.pdf">FAQ-Health-Corps (PDF)</a></li><li>Travel Reimbursement FAQ: <a href="https://files.covid19.ca.gov/pdf/FAQ-Travel-Reimbursement.pdf">FAQ-Travel-Reimbursement (PDF)</a></li><li>SNF Orientation: <a href="https://files.covid19.ca.gov/pdf/SNF-Nursing-Staff-Orientation.pdf">SNF-Nursing-Staff-Orientation (PDF)</a></li><li>How to file a complaint: <a href="https://files.covid19.ca.gov/pdf/How-to-file-a-complaint.pdf">How-to-file-a-complaint (PDF)</a></li><li>Direct deposit: <a href="https://files.covid19.ca.gov/pdf/std699-Direct-Deposit.pdf">std699-Direct-Deposit (PDF)</a></li><li>Travel expense claim: <a href="https://files.covid19.ca.gov/pdf/Std262-Travel-Expense-Claim.pdf">Std262-Travel-Expense-Claim (PDF)</a></li></ul>
 
 
 
@@ -435,29 +443,6 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>Visit <a href="https://healthcarevolunteers.ca.gov/">https://healthcarevolunteers.ca.gov/</a> and use the account you created while applying to correct or update any information you want.</p>
-
-      </div>
-    </div>
-  </div>
-</cwds-accordion>
-
-
-
-
-
-
-
-
-<cwds-accordion>
-  <div class="card">
-    <button class="card-header accordion-alpha" type="button" aria-expanded="false">
-      <div class="accordion-title">
-<h4 id="Health-Corps-Resources">Resources for participants</h4>
-      </div>
-    </button>
-    <div class="card-container" aria-hidden="true" style="height: 0px;">
-      <div class="card-body">
-<ul><li>Health Corps FAQ: <a href="https://files.covid19.ca.gov/pdf/FAQ-Health-Corps.pdf">FAQ-Health-Corps (PDF)</a></li><li>Travel Reimbursement FAQ: <a href="https://files.covid19.ca.gov/pdf/FAQ-Travel-Reimbursement.pdf">FAQ-Travel-Reimbursement (PDF)</a></li><li>SNF Orientation: <a href="https://files.covid19.ca.gov/pdf/SNF-Nursing-Staff-Orientation.pdf">SNF-Nursing-Staff-Orientation (PDF)</a></li><li>How to file a complaint: <a href="https://files.covid19.ca.gov/pdf/How-to-file-a-complaint.pdf">How-to-file-a-complaint (PDF)</a></li><li>Direct deposit: <a href="https://files.covid19.ca.gov/pdf/std699-Direct-Deposit.pdf">std699-Direct-Deposit (PDF)</a></li><li>Travel expense claim: <a href="https://files.covid19.ca.gov/pdf/Std262-Travel-Expense-Claim.pdf">Std262-Travel-Expense-Claim (PDF)</a></li></ul>
 
       </div>
     </div>
