--- a/tl/restaurants-deliver-home-meals-for-seniors/index.html
+++ b/tl/restaurants-deliver-home-meals-for-seniors/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Great Plates Delivered: Home meals for seniors</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Nobyembre 30, 2020 sa 5:15 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Disyembre 2, 2020 sa 2:27 PM</p>
           
         </div>
       </div>
@@ -175,7 +175,7 @@
 
 
 
-<p>Ikinalulugod naming ianunsyo na pinahintulutan ng programang Pampublikong Tulong (Public Assistance, PA) ng Ahensya para sa Emergency na Pamamahala ng Pederal (Federal Emergency Management Agency, FEMA) ang pagpapalawig ng programang Great Plates Delivered hanggang Disyembre 8, 2020.</p>
+<p>Ikinalulugod naming ianunsyo na pinahintulutan ng programang Pampublikong Tulong (Public Assistance, PA) ng Ahensya para sa Emergency na Pamamahala ng Pederal (Federal Emergency Management Agency, FEMA) ang pagpapalawig ng programang Great Plates Delivered hanggang Enero 7, 2021.</p>
 
 
 
