deploy: 65178b7e4081e551bfb836c57ca7d256e7d6f2e5

--- a/contracts/index.html
+++ b/contracts/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Released COVID-19 Response Contracts</h1>
           
-            <p class="small-text">Last updated&nbsp;November 25, 2020 at 4:45 PM</p>
+            <p class="small-text">Last updated&nbsp;December 7, 2020 at 5:34 PM</p>
           
         </div>
       </div>
@@ -640,7 +640,7 @@
 <ul><li>Radisson Hotel Oakland: <a href="https://files.covid19.ca.gov/pdf/Oakland-Alameda-hotels-LLC-DSS.pdf">Oakland-Alameda-hotels-LLC-DSS (PDF)</a></li><li>Radisson Hotel Oakland (Amendment): <a href="https://files.covid19.ca.gov/pdf/Oakland-Alameda-hotels-LLC-DGS-Amendment.pdf">Oakland-Alameda-hotels-LLC-DGS-Amendment (PDF)</a></li></ul>
 <ul><li>Royal Hospitality: <a href="https://files.covid19.ca.gov/pdf/Royal-hospitality-OES.pdf">Royal-hospitality-OES (PDF)</a></li></ul>
 <ul><li>Safety Management Systems, LLC: <a href="https://files.covid19.ca.gov/pdf/Safety-management-systems-LLC-DWR.pdf">Safety-management-systems-LLC-DWR (PDF)</a></li><li>Safety Management Systems, LLC (Amendment): <a href="https://files.covid19.ca.gov/pdf/Safety-management-systems-LLC-DWR-amendment.pdf">Safety-management-systems-LLC-DWR-amendment (PDF)</a></li></ul>
-<ul><li>SBH Natomas LLC: <a href="https://files.covid19.ca.gov/pdf/SBH-Natomas-LLC-CDPH.pdf">SBH-Natomas-LLC-CDPH (PDF)</a></li><li>SBH Natomas LLC (Amendment): <a href="https://files.covid19.ca.gov/pdf/SBH-natomas-LLC-CDPH-Amendment2.pdf">SBH-natomas-LLC-CDPH-Amendment2 (PDF)</a></li></ul>
+<ul><li>SBH Natomas LLC: <a href="https://files.covid19.ca.gov/pdf/SBH-Natomas-LLC-CDPH.pdf">SBH-Natomas-LLC-CDPH (PDF)</a></li><li>SBH Natomas LLC (Amendment): <a href="https://files.covid19.ca.gov/pdf/SBH-natomas-LLC-CDPH-Amendment.pdf">SBH-natomas-LLC-CDPH-Amendment (PDF)</a></li><li>SBH Natomas LLC (Amendment): <a href="https://files.covid19.ca.gov/pdf/SBH-natomas-LLC-CDPH-Amendment2.pdf">SBH-natomas-LLC-CDPH-Amendment2 (PDF)</a></li><li>SBH Natomas LLC (Amendment): <a href="https://files.covid19.ca.gov/pdf/SBH-natomas-LLC-CDPH-Amendment3.pdf">SBH-natomas-LLC-CDPH-Amendment3 (PDF)</a></li></ul>
 <ul><li>Service Master Restoration: <a href="https://files.covid19.ca.gov/pdf/Service-master-restoration-DGS.pdf">Service-master-restoration-DGS (PDF)</a></li><li>Service Master Restoration (Amendment): <a href="https://files.covid19.ca.gov/pdf/Service-master-restoration-DGS-amendment.pdf">Service-master-restoration-DGS-amendment (PDF)</a></li><li>Service Master Restoration: <a href="https://files.covid19.ca.gov/pdf/Service-master-restoration-DGS-2.pdf">Service-master-restoration-DGS-2 (PDF)</a></li></ul>
 <ul><li>Social Gear Media: <a href="https://files.covid19.ca.gov/pdf/Social-gear-media-DGS.pdf">Social-gear-media-DGS (PDF)</a></li><li>Social Gear Media: <a href="https://files.covid19.ca.gov/pdf/Social-gear-media-DGS-2.pdf">Social-gear-media-DGS-2 (PDF)</a></li><li>Social Gear Media (cancelled): <a href="https://files.covid19.ca.gov/pdf/Social-gear-media-DGS-3-cancelled.pdf">Social-gear-media-DGS-3-cancelled (PDF)</a></li></ul>
 <ul><li>Sodexo Operations LLC: <a href="https://files.covid19.ca.gov/pdf/Sodexo-operations-LLC-CDPH.pdf">Sodexo-operations-LLC-CDPH (PDF)</a></li></ul>
